# PG2024-Data-Parallel-Ray-Tracing

./: README.md
optix/: CMakeLists.txt  distributed_traversal_kernel.cu  kernel.cu  path_gen_kernel.cu  precom_ray_kernel.cu  ray_data.hpp  sample.hpp  secondary_ray_kernel.cu  shadow_ray_kernel.cu  util.hpp  vis_ray_kernel.cu
optix/bsdfs/: lambertian.hpp  water.hpp
src/cuda/: bvh_intersection.cu  cuda_compaction.cu  environment_light.cu  frame_buffer_update.cu
src/render/: pipeline.cpp  pipeline_helper.cpp  render.cpp  renderer.cpp
trainingcode/: datasets.py  main.py  module.py  nnVis.py  params.py
trainingcode/utils/: Float2Half.py  construct_input.py  exportHalfModule.py  exportModule.py  exportRefsDepth.py  halfTorchScripts_VIS.py  post_png.py  testDepthLoss.py  torchScripts_VIS.py
